# civic-remediation

./: .env.example  README.md  prompts-lock.json  pyproject.toml
app/: agent_os.py  agent_os_server.py  knowledge.py  main.py  models.py  team.py  workflow.py
app/agents/: analyst.py  auditor.py  base.py  bureaucrat.py  coordinator.py  engineer.py  investigator.py  liaison.py  sentinel.py  strategist.py
app/knowledge/: __init__.py  base.py  memory.py
app/team/: __init__.py  builder.py
app/utils/: __init__.py  prompts.py
prompts/: auditor.yaml  bureaucrat.yaml  coordinator.yaml  engineer.yaml  investigator.yaml  liaison.yaml  sentinel.yaml
